--- a/index.html
+++ b/index.html
@@ -112,13 +112,17 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
                 <h1 class="text-4xl md:text-6xl lg:text-7xl font-bold text-gray-900 dark:text-white mb-6 leading-tight">
-                    I'm a <span class="text-purple-600 dark:text-purple-400">Full Stack Laravel Developer</span><br>
-                    Creating Scalable Web Applications
+                    I'm a <span class="text-purple-600 dark:text-purple-400">Full-Stack Engineer</span><br>
+                    Building Scalable Web Applications & APIs
                 </h1>
                 <p class="text-xl text-gray-600 dark:text-gray-300 mb-8 max-w-4xl mx-auto leading-relaxed">
-                    Experienced Laravel developer with expertise in web application development and delivering
-                    high-quality, scalable solutions. Passionate about leveraging modern technologies to build
-                    innovative projects.
+                    Full-Stack Engineer with 3+ years of experience delivering SaaS, B2B, and e-commerce platforms using
+                    <strong>Laravel</strong>, <strong>Vue.js</strong>, and <strong>Nuxt.js</strong>. Skilled in REST &
+                    GraphQL
+                    APIs,
+                    real-time apps with WebSockets & Redis, and cloud integrations like S3, Firebase, and EDI.
+                    Proven expertise in third-party services (Chargebee, Stripe, Twilio, DocuSign, Shopify, OpenAI) and
+                    deploying high-performance solutions with clean code and fast release cycles.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <button id="download-resume"
@@ -150,15 +154,23 @@
                 <div>
                     <h3 class="text-2xl font-semibold text-gray-900 dark:text-white mb-6">My Journey</h3>
                     <p class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed">
-                        As a passionate full-stack developer with more than 3 years of experience, I've dedicated my
-                        career to mastering Laravel and Vue.js and creating robust web applications. With a strong
-                        foundation in both frontend and backend development, I bring comprehensive solutions to complex
-                        problems.
+                        I graduated with a degree in <strong>Software Engineering</strong> from the
+                        <strong>University of Sargodha</strong>. My passion for technology and problem-solving
+                        quickly guided me into the world of web development, where I began exploring both
+                        backend and frontend ecosystems.
                     </p>
                     <p class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed">
-                        My journey began at Government College University Faisalabad where I earned my Bachelor's degree
-                        in Computer Science. Since then, I've worked with various technologies and frameworks,
-                        constantly expanding my skillset to stay at the forefront of web development trends.
+                        Over the past <strong>3+ years</strong>, I’ve grown into a versatile
+                        <strong>Full-Stack Engineer</strong>, building scalable SaaS, B2B, and e-commerce platforms
+                        using <strong>Laravel</strong>, <strong>Vue.js</strong>, and <strong>Nuxt.js</strong>.
+                        I specialize in REST & GraphQL APIs, real-time apps with WebSockets & Redis, and integrations
+                        with third-party services like Stripe, Chargebee, DocuSign, Twilio, and OpenAI.
+                    </p>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed">
+                        My journey has been defined by solving complex problems, mentoring juniors, collaborating in
+                        agile teams,
+                        and delivering high-quality solutions that balance performance, scalability, and clean code
+                        practices.
                     </p>
                     <div class="flex items-center mt-8">
                         <svg class="w-6 h-6 text-purple-600 dark:text-purple-400 mr-3"
@@ -390,42 +402,26 @@
                     <div class="flex flex-col md:flex-row justify-between">
                         <div class="flex-1 pr-8">
                             <h3 class="text-2xl font-semibold text-gray-900 dark:text-white mb-2">Maqware Solutions</h3>
-                            <p class="text-lg text-purple-600 dark:text-purple-400 mb-4">Full Stack Developer</p>
-                            <p class="text-gray-600 dark:text-gray-300 mb-4">May 2023 - Present</p>
+                            <p class="text-lg text-purple-600 dark:text-purple-400 mb-4">Full Stack Web Application
+                                Developer</p>
+                            <p class="text-gray-600 dark:text-gray-300 mb-4">Sep 2022 - Present · On-site</p>
                             <ul class="list-disc list-inside text-gray-600 dark:text-gray-300 space-y-2">
-                                <li>Laravel Developer with strong foundation in Laravel's core principles and tools</li>
-                                <li>Skilled in backend and frontend development using Laravel, Nova, Vue.js, and Nuxt.js
+                                <li>Architected and delivered scalable web apps with <strong>Laravel</strong> (backend)
+                                    and <strong>Vue 3 +
+                                        Tailwind CSS</strong> (frontend).</li>
+                                <li>Developed and optimized <strong>RESTful APIs</strong>, ensuring smooth
+                                    frontend-backend communication.
                                 </li>
-                                <li>Specializes in API integration via Vuex and building RESTful APIs</li>
-                                <li>Developed Maqware.com in-house website using Nuxt.js, delivering scalable and
-                                    responsive applications</li>
+                                <li>Integrated complex third-party APIs using Axios & Fetch for real-time features.</li>
+                                <li>Mentored 2 junior developers, led code reviews, and guided architecture decisions.
+                                </li>
+                                <li>Collaborated in <strong>Agile sprints</strong> with accurate task estimation and
+                                    delivery.</li>
+                                <li>Maintained clean, scalable, and version-controlled code using Git.</li>
                             </ul>
                         </div>
                         <div class="mt-6 md:mt-0">
                             <img src="https://picsum.photos/seed/maqware/120/120.jpg" alt="Maqware Solutions"
-                                class="w-24 h-24 rounded-lg object-cover">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="bg-white dark:bg-gray-900 rounded-xl p-8 shadow-lg relative overflow-hidden">
-                    <div class="absolute top-0 left-0 w-1 h-full bg-purple-600"></div>
-                    <div class="flex flex-col md:flex-row justify-between">
-                        <div class="flex-1 pr-8">
-                            <h3 class="text-2xl font-semibold text-gray-900 dark:text-white mb-2">Pacslink Corporation
-                            </h3>
-                            <p class="text-lg text-purple-600 dark:text-purple-400 mb-4">Software Developer</p>
-                            <p class="text-gray-600 dark:text-gray-300 mb-4">September 2022 – April 2023</p>
-                            <ul class="list-disc list-inside text-gray-600 dark:text-gray-300 space-y-2">
-                                <li>Developed new modules for desktop applications using Java</li>
-                                <li>Created detailed reports with Jasper Reports (iReport) for medical management system
-                                </li>
-                                <li>Designed and implemented patient portal with feature-rich dashboard on Oracle APEX
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="mt-6 md:mt-0">
-                            <img src="https://picsum.photos/seed/pacslink/120/120.jpg" alt="Pacslink Corporation"
                                 class="w-24 h-24 rounded-lg object-cover">
                         </div>
                     </div>
@@ -447,11 +443,11 @@
             </div>
 
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8" id="projects-grid">
-                <!-- Project 1: Service Owl -->
+                <!-- Project 1: Shifterp -->
                 <div
                     class="bg-white dark:bg-gray-900 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 group">
                     <div class="relative overflow-hidden">
-                        <img src="https://picsum.photos/seed/serviceowl/400/250.jpg" alt="Service Owl"
+                        <img src="assets/images/shifterp.png" alt="Shift ERP"
                             class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105">
                         <div
                             class="absolute inset-0 bg-purple-600/20 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -462,26 +458,31 @@
                                 <span
                                     class="bg-white/90 text-purple-600 text-xs px-2 py-1 rounded-full font-medium">Laravel</span>
                                 <span
-                                    class="bg-white/90 text-purple-600 text-xs px-2 py-1 rounded-full font-medium">Vue.js</span>
+                                    class="bg-white/90 text-purple-600 text-xs px-2 py-1 rounded-full font-medium">PHP</span>
                                 <span
-                                    class="bg-white/90 text-purple-600 text-xs px-2 py-1 rounded-full font-medium">MySQL</span>
+                                    class="bg-white/90 text-purple-600 text-xs px-2 py-1 rounded-full font-medium">React</span>
+                                <span
+                                    class="bg-white/90 text-purple-600 text-xs px-2 py-1 rounded-full font-medium">SQL</span>
+                                <span
+                                    class="bg-white/90 text-purple-600 text-xs px-2 py-1 rounded-full font-medium">AWS</span>
                             </div>
                         </div>
                     </div>
                     <div class="p-6">
                         <span
                             class="inline-block bg-purple-100 dark:bg-purple-900 text-purple-600 dark:text-purple-400 text-xs px-3 py-1 rounded-full mb-3 font-medium">
-                            Agency Platform
+                            ERP System
                         </span>
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">
-                            Service Owl
+                            Shift ERP
                         </h3>
                         <p class="text-gray-600 dark:text-gray-300 text-sm mb-4 leading-relaxed">
-                            A software platform connecting clients and candidates with agencies through automated
-                            workflows and dynamic scheduling. Users access personalized dashboards with secure
-                            permissions to manage shifts, information, and services efficiently.
+                            A multi-tenant ERP platform for companies to securely manage operations, including
+                            Customer Management, Inventory, Smart Scheduling, Administration, Accounting, Supply
+                            Chain, and Reporting. Each company has its own secure database with super admin–controlled
+                            access for streamlined business processes.
                         </p>
-                        <a href="https://www.serviceowl.ca/" target="_blank"
+                        <a href="https://shifterp.com" target="_blank"
                             class="text-purple-600 dark:text-purple-400 hover:text-purple-700 dark:hover:text-purple-300 font-medium inline-flex items-center">
                             Visit Website
                             <svg class="ml-2 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -494,11 +495,12 @@
                     </div>
                 </div>
 
+
                 <!-- Project 2: Money Maker -->
                 <div
                     class="bg-white dark:bg-gray-900 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 group">
                     <div class="relative overflow-hidden">
-                        <img src="https://picsum.photos/seed/moneymaker/400/250.jpg" alt="Money Maker"
+                        <img src="assets/images/moneymaker.png" alt="Money Maker"
                             class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105">
                         <div
                             class="absolute inset-0 bg-purple-600/20 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -860,7 +862,7 @@
                     <span class="text-3xl font-bold text-gray-900 dark:text-white">Ashir Sattar</span>
                 </div>
                 <p class="text-gray-600 dark:text-gray-400 mb-8 text-lg">
-                    © 2023 Full Stack Developer Portfolio. All rights reserved. Crafted with passion and modern
+                    © 2025 Full Stack Developer Portfolio. All rights reserved. Crafted with passion and modern
                     technologies.
                 </p>
                 <div class="flex justify-center space-x-8">
